syntax = "proto3";

package njordr;

service NjordrService {
    rpc CalculateEarnings(CalculateEarningsRequest) returns (CalculateEarningsResponse);
    rpc GenerateSettlement(GenerateSettlementRequest) returns (GenerateSettlementResponse);
    rpc ExecuteSettlement(ExecuteSettlementRequest) returns (ExecuteSettlementResponse);
    rpc TrackTrade(TrackTradeRequest) returns (TrackTradeResponse);
    rpc GetTradeHistory(GetTradeHistoryRequest) returns (GetTradeHistoryResponse);
}

message CalculateEarningsRequest {
    string provider_id = 1;
    string period_start = 2;
    string period_end = 3;
}

message CalculateEarningsResponse {
    double total_earnings = 1;
    double commission = 2;
    double net_earnings = 3;
}

message GenerateSettlementRequest {
    string provider_id = 1;
    string period_start = 2;
    string period_end = 3;
}

message GenerateSettlementResponse {
    string settlement_id = 1;
    double amount = 2;
    string status = 3;
}

message ExecuteSettlementRequest {
    string settlement_id = 1;
    string payment_method = 2;
}

message ExecuteSettlementResponse {
    string transaction_id = 1;
    string status = 2;
}

message TrackTradeRequest {
    string trade_id = 1;
    string provider_id = 2;
    double amount = 3;
    string timestamp = 4;
}

message TrackTradeResponse {
    bool success = 1;
}

message GetTradeHistoryRequest {
    string provider_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetTradeHistoryResponse {
    repeated Trade trades = 1;
    int32 total = 2;
}

message Trade {
    string trade_id = 1;
    double amount = 2;
    string timestamp = 3;
    string status = 4;
}
